fix opentelemetry metrics